--- a/js/index.html
+++ b/js/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -27,21 +28,43 @@
         <li class="list-group-item">And a fifth one</li>
     </ul>
 
+
+
+    <div class="black-bg">
+        <div class="white-bg">
+          <h4>로그인하세요</h4>
+          <form action="success.html">
+            <div class="my-3">
+              <input type="text" class="form-control">
+             </div>
+             <div class="my-3">
+               <input type="password" class="form-control">
+             </div>
+             <button type="submit" class="btn btn-primary">전송</button>
+             <button type="button" class="btn btn-danger" id="close">닫기</button>
+          </form> 
+        </div>
+      </div> 
+
+    <button id="login">로그인</button>
+
+
+
     <script>
 
-    
-
-        // document.getElementsByClassName('navbar-toggler')[0].addEventListener('click', 
-        // function(){
-
-        //     document.getElementsByClassName('list-group')[0].classList.toggle('show');
-        // })
-
-        document.querySelectorAll('.navbar-toggler')[0].addEventListener('click', 
+        $('.navbar-toggler').on('click', 
         function(){
-
-            document.querySelectorAll('.list-group')[0].classList.toggle('show');
+            $('.list-group').toggleClass('show');
         })
+
+        $('#login').on('click', function(){
+            $('.black-bg').addClass('modal');
+        })
+
+        $('#close').on('click', function(){
+            $('.black-bg').css('display', 'none');
+        })
+
 
 
     </script>
@@ -50,8 +73,6 @@
 
 
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
