--- a/js/detail.html
+++ b/js/detail.html
@@ -66,6 +66,30 @@
         </div>
       </div> 
 
+      <div class="container mt-3">
+        <div class="card p-3">
+          <span id="name">상품명</span>
+          <span id="price">가격</span>
+        </div>
+      </div> 
+
+      <form class="container my-5 form-group">
+        <p>상품선택</p>
+        <select class="form-select mt-2">
+          <option>모자</option>
+          <option>셔츠</option>
+          <option>바지</option>
+        </select>
+        <select class="form-select mt-2 form-hide">
+
+        </select>
+    </form>
+
+    <div id="test">
+
+
+    </div>
+
       <script src="tab.js"></script>
 
 
